--- a/index.html
+++ b/index.html
@@ -8,37 +8,52 @@
   
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
+
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <header>
+      <h1>Reliable, efficient delivery<span class="heading-bold-text">Powered by Technology</span></h1>
+      <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    </header>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <main>
+      <section class="cards">
+        <div class="card supervisor">
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="magnifying glass icon">
+        </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <div class="centered-cards">
+          <div class="card team-builder">  
+            <h2>Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <img src="images/icon-team-builder.svg" alt="house icon">
+          </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+          <div class="card karma">
+            <h2>Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <img src="images/icon-karma.svg" alt="bulb icon">
+          </div>
+        </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+        <div class="card calculator">
+          <h2>Calculator</h2>
+          <p>Uses data from past projects to provide better delivery estimates</p>
+          <img src="images/icon-calculator.svg" alt="computer icon">
+        </div>
+      </section>
+  </main>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://replit.com/@ilonaGold">ilonaGold</a>.
     </p>
   </footer>
 </body>
