--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Four card feature section</title>
 </head>
 
 <body>
     <header>
-      <h1>Reliable, efficient delivery<span class="heading-bold-text">Powered by Technology</span></h1>
+      <h1>Reliable, efficient delivery<span class="heading-bold-text"> Powered by Technology</span></h1>
       <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
 
