Added desktop styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-      <h1>Reliable, efficient delivery<span class="heading-bold-text"> Powered by Technology</span></h1>
+      <h1>Reliable, efficient delivery<br><span class="heading-bold-text"> Powered by Technology</span></h1>
       <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
 
